--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "学マス",
-  "description": "学マス",
+  "name": "学マス主题浏览器扩展插件",
+  "description": "アイマス最高",
   "private": true,
   "version": "1.0.0",
   "type": "module",
